tests/out/error/match/case_handled.out
tests/out/error/match/case_handled.in.bt:5:1 error: match case `2` is already handled
